# atlas-dataflow

./: .gitignore  README.md  pyproject.toml  pytest.ini
docs/: config.md  contract.md  e2e_suite.md  engine.md  manifest.schema.v1.md  pipeline_elements.md  pipeline_notebook.md  run_result.md  testing.md  traceability.md
docs/domain/: domain.core-pipeline.v1.md
docs/spec/: audit.duplicates.v1.md  audit.schema_types.v1.md  contract.conformity_report.v1.md  contract.load.v1.md  default_search_grids.v1.md  document_model.v1.md  e2e.pipeline.v1.md  errors.schema.v1.md  evaluate.metrics.v1.md  evaluate.model_selection.v1.md  export.inference_bundle.v1.md  internal_contract.v1.md  model_card.v1.md  model_registry.v1.md  notebook.orchestrator.v1.md  notebook.ui.adapter.v1.md  persistence.preprocess.v1.md  report.md.v1.md  report.pdf.v1.md  representation.preprocess.v1.md  split.train_test.v1.md  train.search.v1.md  train.single.v1.md  transform.apply_defaults.v1.md  transform.cast_types_safe.v1.md  transform.categorical_standardize.v1.md  transform.deduplicate.v1.md  transform.impute_missing.v1.md
notebooks/: atlas_pipeline_happy_path_v1.ipynb  atlas_pipeline_template_v1.ipynb  issue_M7-04_runtime_templates_repository_v1.md
src/atlas_dataflow/: __init__.py
tests/: conftest.py  test_smoke.py
tests/e2e/: _helpers.py  test_pipeline_bank_like.py  test_pipeline_smoke_e2e.py  test_pipeline_telco_like.py
tests/errors/: _snapshot_helpers.py  test_category_out_of_domain.py  test_extra_column.py  test_invalid_dtype.py  test_manifest_missing.py  test_missing_column.py  (+2 more)
(+120 files in other folders)
